Initial setup Fixes #1

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+@use "variables";
+@use "base";
+@use "theme";
+@use "animations";
+@use "typography";
+@use "buttons";
