Create authentication Fixes #9

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<djk-toolbar></djk-toolbar>
+<djk-toolbar (sidenav)="drawer.toggle()"></djk-toolbar>
+<mat-drawer-container class="main-sidenav" autosize>
+	<mat-drawer #drawer mode="side">
+	</mat-drawer>
+
+	<router-outlet></router-outlet>
+</mat-drawer-container>
+<djk-authentication></djk-authentication>
