--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,1 +1,5 @@
-<p>not-found works!</p>
+<h1>This page is not found!</h1>
+<img src="assets/logo.svg" alt="D|Enterprise logo" class="logo">
+<button mat-button class="go-back-button" routerLink="/">
+	<mat-icon>arrow_back</mat-icon> Go back
+</button>
