--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
-@use "variables";
-@use "base";
-@use "theme";
-@use "animations";
-@use "typography";
-@use "buttons";
+@use 'variables';
+@use 'base';
+@use 'theme';
+@use 'animations';
+@use 'typography';
+@use 'sidenav';
+@use 'snackbar';
