--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -47,6 +47,17 @@
 	--nemesis-felfire-800: #3fac00;
 	--nemesis-felfire-900: #008900;
 
+	--nemesis-darkness-50: #fcfcfc;
+	--nemesis-darkness-100: #f7f7f7;
+	--nemesis-darkness-200: #f2f2f2;
+	--nemesis-darkness-300: #ebebeb;
+	--nemesis-darkness-400: #c9c9c9;
+	--nemesis-darkness-500: #acacac;
+	--nemesis-darkness-600: #818181;
+	--nemesis-darkness-700: #6d6d6d;
+	--nemesis-darkness-800: #4d4d4d;
+	--nemesis-darkness-900: #2b2b2b;
+
 	--quest-yellow: #ffe822;
 	--quest-yellow-darker: #ffc107;
 }
