--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<djk-layout [ToolbarSidenavButton]="true">
+	<main class="content">
+		<p>home works!</p>
+	</main>
+</djk-layout>
