--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -1,7 +1,30 @@
-<img src="assets/logo.svg" alt="D|Enterprise logo" class="logo">
-<button mat-button class="index-button" *ngIf="auth.user | async" routerLink="/home">
-	Start
-</button>
-<button mat-button class="index-button" *ngIf="!(auth.user | async)" (click)="openDialog()">
-	Start
-</button>
+<djk-layout>
+	<main class="content">
+		<img
+			src="assets/logo.svg"
+			alt="D|Enterprise logo"
+			class="logo"
+			[ngClass]="{ logo__open: logoOpen | async }"
+			@logoTrigger
+			(click)="logoOpen.next(!logoOpen.getValue())"
+		/>
+		<button
+			mat-button
+			class="index-button"
+			[ngClass]="{ 'index-button__open': logoOpen | async }"
+			*ngIf="auth.user | async"
+			routerLink="/home"
+		>
+			Continue
+		</button>
+		<button
+			mat-button
+			class="index-button"
+			[ngClass]="{ 'index-button__open': logoOpen | async }"
+			*ngIf="!(auth.user | async)"
+			(click)="openDialog()"
+		>
+			Continue
+		</button>
+	</main>
+</djk-layout>
