--- a/src/app/pages/index/index.component.scss
+++ b/src/app/pages/index/index.component.scss
@@ -1,8 +1,36 @@
 :host {
 	--logo-size: 9rem;
-	width: 100%;
-	display: grid;
-	place-content: center;
+}
+
+.logo {
+	width: var(--logo-size);
+	height: var(--logo-size);
+	margin-top: -4.5rem;
+	z-index: 20;
+	filter: drop-shadow(0 4px 2px rgba(0, 0, 0, 0.4));
+	transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+
+	&:hover {
+		animation-play-state: paused;
+	}
+
+	&__open {
+		margin-top: -7.5rem;
+	}
+}
+
+.index-button {
+	margin-top: -3rem;
+	font-size: 1.2rem;
+	z-index: 10;
+	color: var(--unsong-white);
+	opacity: 0;
+	transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+
+	&__open {
+		opacity: 1;
+		margin-top: 7rem;
+	}
 }
 
 @media only screen and (min-width: 600px) {
@@ -15,15 +43,4 @@
 	:host {
 		--logo-size: 16rem;
 	}
-}
-
-.logo {
-	width: var(--logo-size);
-	height: var(--logo-size);
-	margin: 25vh auto auto;
-}
-
-.index-button {
-	margin-top: 6rem;
-	font-size: 1.2rem;
 }
