--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,191 +1,54 @@
-:host {
-	width: 100%;
+.navigation {
+	display: flex;
+	align-items: center;
+	padding: 3rem 2rem;
+}
+
+.back-button {
+	margin-right: 1.5rem;
+	border-radius: 0.9rem;
+}
+
+.page-title {
+	margin: 0;
+	font-weight: 800;
+}
+
+.provider-container {
+	padding: 0 2rem;
 	display: grid;
-	place-content: center;
+	grid-template-rows: 1fr 1fr;
+	grid-template-columns: 1fr 1fr;
+	gap: 0 1rem;
 }
 
-.container {
-	background-color: var(--vibrant-gray-100);
-	border-radius: 0.6rem;
-	margin-top: 9rem;
-	box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-	position: relative;
-	overflow: hidden;
-	width: 48rem;
-	max-width: 100%;
-	min-height: 35rem;
+.info-text {
+	grid-row: 1/1;
+	grid-column: 1/3;
 }
 
-h1 {
-	font-size: 1.5rem;
-	font-weight: 700;
-	color: white;
-	margin-bottom: 1.3rem;
-}
+.provider-button {
+	padding-top: 0.3rem;
+	padding-bottom: 0.3rem;
 
-p {
-	color: var(--unsong-white);
-	margin-bottom: 1.3rem;
-	font-weight: 400;
-}
-
-.social-container {
-	margin: 0.4rem 0 1.3rem;
-
-	.social {
-		margin: 0 0.4rem;
-		background: var(--nemesis-black-50);
-		padding-top: 3px;
-
-		img {
-			max-height: 1.2rem;
-			margin-right: 0.4rem;
-		}
+	img {
+		height: 65%;
+		margin-right: 0.5rem;
 	}
 }
 
 .form {
-	background-color: var(--vibrant-gray-100);
-	display: flex;
-	align-items: center;
-	justify-content: flex-start;
-	flex-direction: column;
-	padding: 3rem;
-	height: 100%;
-	text-align: center;
+	padding: 3rem 2rem;
 }
 
-.text {
-	margin: 1rem 0;
-	font-weight: 500;
-}
-
-.next-button {
-	margin-top: auto;
-	padding-left: 3rem;
-	padding-right: 3rem;
-	border-width: 2px;
-}
-
-.form-container {
-	position: absolute;
-	top: 0;
-	height: 100%;
-	transition: all 0.6s ease-in-out;
-}
-
-.sign-in-container {
-	left: 0;
-	width: 50%;
-	z-index: 2;
-}
-
-.sign-up-container {
-	left: 0;
-	width: 50%;
-	opacity: 0;
-	z-index: 1;
-}
-
-.overlay-container {
-	position: absolute;
-	top: 0;
-	left: 50%;
-	width: 50%;
-	height: 100%;
-	overflow: hidden;
-	transition: transform 0.6s ease-in-out;
-	z-index: 100;
-
-	border-right: 1px solid #382161;
-	border-left: 1px solid #382161;
-}
-
-.overlay {
-	background: var(--nemesis-green-400);
-	background: linear-gradient(
-		to right,
-		var(--nemesis-soulstone-400),
-		var(--nemesis-soulstone-600),
-		var(--nemesis-soulstone-900)
-	);
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: 0 0;
-	color: #ffffff;
-	position: relative;
-	left: -100%;
-	height: 100%;
-	width: 200%;
-	transform: translateX(0);
-	transition: transform 0.6s ease-in-out;
-}
-
-.overlay-panel {
-	position: absolute;
-	display: flex;
-	align-items: center;
-	justify-content: flex-start;
-	flex-direction: column;
-	padding: 3rem;
-	padding-bottom: 5.5rem;
-	text-align: center;
-	top: 0;
-	height: 100%;
-	width: 50%;
-	transform: translateX(0);
-	transition: transform 0.6s ease-in-out;
-}
-
-.overlay-left {
-	transform: translateX(-20%);
-	padding-bottom: 3.7rem;
-}
-
-.overlay-right {
-	right: 0;
-	transform: translateX(0);
-}
-
-.container.right-panel-active {
-	.sign-in-container {
-		transform: translateX(100%);
-	}
-
-	.sign-up-container {
-		transform: translateX(100%);
-		opacity: 1;
-		z-index: 5;
-		animation: show 0.6s;
-	}
-
-	.overlay-container {
-		transform: translateX(-100%);
-	}
-
-	.overlay {
-		transform: translateX(50%);
-	}
-
-	.overlay-left {
-		transform: translateX(0);
-	}
-
-	.overlay-right {
-		transform: translateX(20%);
-	}
-}
-
-@keyframes show {
-	0%,
-	49.99% {
-		opacity: 0;
-		z-index: 1;
-	}
-
-	50%,
-	100% {
-		opacity: 1;
-		z-index: 5;
+@media only screen and (min-width: 600px) {
+	.container {
+		max-width: 600px;
+		background: #2b2b2b;
+		border-radius: 0.4rem;
+		padding: 2rem 0 0;
+		margin: 0 auto;
+		box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%),
+			0px 1px 5px 0px rgb(0 0 0 / 12%);
 	}
 }
